# Logan-Android

Example/Logan-Android/: build.gradle  gradle.properties  settings.gradle
Example/Logan-Android/CLogx/: CMakeLists.txt  aes_util.c  aes_util.h  base_util.c  base_util.h  clogx_core.c  clogx_core.h  clogx_status.h  console_util.c  console_util.h  construct_data.c  construct_data.h  directory_util.c  directory_util.h  json_util.c  json_util.h  logx_config.h  mmap_util.c  mmap_util.h  zlib_util.c  zlib_util.h
Example/Logan-Android/Clogan/: CMakeLists.txt  aes_util.c  aes_util.h  clogan_core.c  clogan_core.h  construct_data.c  mmap_util.c  mmap_util.h  zlib_util.c  (+1 more)
Example/Logan-Android/logx/: CMakeLists.txt  build.gradle  proguard-rules.pro
Example/Logan-Android/logx/src/androidTest/java/com/yy/logx/: LoganTest.java  LogxTest.java
Example/Logan-Android/logx/src/main/: AndroidManifest.xml
Example/Logan-Android/logx/src/main/java/com/yy/logx/: CLoganProtocol.java  CLogxProtocol.java  ConstantCode.java  Logan.java  LoganConfig.java  LoganControlCenter.java  LoganModel.java  LoganProtocol.java  LoganProtocolHandler.java  LoganThread.java  Logx.java  LogxConfig.java  LogxControlCenter.java  LogxModel.java  LogxProtocol.java  LogxProtocolHandler.java  LogxThread.java  OnLoganProtocolStatus.java  OnLogxProtocolStatus.java  SendAction.java  SendLogRunnable.java  Util.java  WriteAction.java
Example/Logan-Android/logx/src/main/jni/: clogan_protocol.h  clogx_protocol.c  clogx_protocol.h
Example/Logan-Android/logx/src/test/java/com/yy/logx/: ExampleUnitTest.java
(+34 files in other folders)
